testing live change

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Guessing Game</title>
 
-    <!-- Bootstrap and CSS here-->
+    <!-- Bootstrap and CSS here (test)-->
   
     <link rel='stylesheet' type='text/css' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel='stylesheet' type='text/css' href='style.css'>
